--- a/config/config.json
+++ b/config/config.json
@@ -15,6 +15,7 @@
     "dialect": "mysql"
   },
   "production": {
+    "use_env_variable": "JAWSDB_URL",
     "username": "root",
     "password": "root",
     "database": "bamazon",
