--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.16.4",
+    "mysql": "^2.16.0",
     "mysql2": "^1.6.2",
     "sequelize": "^4.41.0"
   },
